Services test finished